<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zsl_driver</name>
  <version>0.1.0</version>
  <description>ZSL-1W 轮足钢镚 ROS 2 驱动 — 封装 mc_sdk_zsl_1w_py，提供 cmd_vel + service 接口</description>
  <maintainer email="nvidia@localhost.local">nvidia</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
