<?xml version="1.0"?>
<package format="3">
  <name>zsl_web_control</name>
  <version>0.4.0</version>
  <description>Commercial web control, mapping, map management, localization and Nav2 gateway for ZSL-1W.</description>
  <maintainer email="nvidia@localhost">nvidia</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>zsl_bringup</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
