<?xml version="1.0"?>
<package format="3">
  <name>zsl_bringup</name>
  <version>0.2.0</version>
  <description>ZSL-1W modular bringup for base, mapping, localization, navigation and web operations.</description>
  <maintainer email="nvidia@zsl-1w.local">nvidia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zsl_driver</exec_depend>
  <exec_depend>zsl_web_control</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_navigation2</exec_depend>
  <exec_depend>amcl_registration</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
